Fix Java 9 method usage